--- a/vistas/registrar_estudiante.html
+++ b/vistas/registrar_estudiante.html
@@ -2,7 +2,7 @@
 <html lang="es">
 </head>
 <meta charset="UTF-8">
-</title>registro de estudiante</title>
+<title>registro de estudiante</title>
 <link rel="stylesheet" href="../estilos/estilos_registro.css">
 </head>
 </body>
@@ -13,7 +13,7 @@
     <script src="../js/header.js"></script>
 
 
-    </h2>registro de estudiante</h2>
+    <h2>Registro de estudiante</h2>
 
     <form action="procesar_registro.php" method="POST">
         <div class="form-grid">
@@ -32,72 +32,72 @@
                     </select>
             </div>
 
-        </div class="form-group">
-        <label for="documento"> Número de documento</label>
-        <input type="text" id="documento" name="documento" required>
-</div>
+            <div class="form-group">
+                <label for="documento"> Número de documento</label>
+                <input type="text" id="documento" name="documento" required>
+            </div>
 
-<div class="form-group">
-    <label for="fecha_nacimiento"> fecha_nacimiento</label>
-    <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required>
-</div>
+            <div class="form-group">
+                <label for="fecha_nacimiento"> fecha_nacimiento</label>
+                <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required>
+            </div>
 
-<div class="form-group">
-    <label for="genero">Género</label>
-    <select id="genero" name="genero" required>
+            <div class="form-group">
+                <label for="genero">Género</label>
+                <select id="genero" name="genero" required>
                 <option value="">seleccione...</option>
-                <option value="M">Masculino></option>
+                <option value="M">Masculino</option>
                 <option value="F">Femenino</option>
                 <option value="O">Otro</option>
-        </div>
+                 </select>
+            </div>
 
 
-        <div class="form-group">
-            <label for="jornada">jornada</label>
-            <label id="jornada"name="jornada"required>
+            <div class="form-group">
+                <label for="jornada">jornada</label>
+                <select id="jornada" name="jornada" required>
                 <option value="">seleccione...</option>
                 <option value="mañana">Mañana</option>
                 <option value="tarde">Tarde</option>
             </select>
-</div>
+            </div>
 
-<div class="form-group">
-    <label for="grado">Grado</label>
-    <input type="text" id="grado" name="grado" required>
-</div>
+            <div class="form-group">
+                <label for="grado">Grado</label>
+                <input type="text" id="grado" name="grado" required>
+            </div>
 
-<div class="form-group">
-    <label for="grupo"> Grupo</label>
-    <input type="text" id="grupo" name="grupo" required>
-</div>
+            <div class="form-group">
+                <label for="grupo"> Grupo</label>
+                <input type="text" id="grupo" name="grupo" required>
+            </div>
 
-<div class="form-group">
-    <label for="telefono">Teléfono</label>
-    <input type="tel" id="telefono" name="telefono" required>
-</div>
+            <div class="form-group">
+                <label for="telefono">Teléfono</label>
+                <input type="tel" id="telefono" name="telefono" required>
+            </div>
 
-<div class="form-group">
-    <label for="correo">Correo institucional</label>
-    <input type="email" id="correo" name="correo" required>
-</div>
+            <div class="form-group">
+                <label for="correo">Correo institucional</label>
+                <input type="email" id="correo" name="correo" required>
+            </div>
 
-<div class="form-group">
-    <label for="password"> Contraseña</label>
-    <input type="password" id="password" name="password" required>
-</div>
-</div>
+            <div class="form-group">
+                <label for="password"> Contraseña</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+        </div>
 
-<div style="text-align: center;">
-    <button type="submit"> registrarse</button>
+        <div style="text-align: center;">
+            <button type="submit"> registrarse</button>
+        </div>
+    </form>
+
+    <footer>
+        <p>&copy; 2025 - IED TECNICA DE CARRIZAL.</p>
+    </footer>
+
 </div>
-</from>
-
-<footer>
-    </p>&copy; 2025 - IED TECNICA DE CARRIZAL.</p>
-</footer>
-
-</div>
-
 </body>
 
 </html>
