--- a/vistas/login.html
+++ b/vistas/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" href="../estilos/estilos_login.css">
+    <link rel="stylesheet" href="../estilos/estilos_contactos.css">
 </head>
 
 <body>
@@ -12,9 +12,9 @@
     <header class="encabezado-principal"></header>
     <script src="../js/header.js"></script>
 
-    <!-- FORMULARIO DE LOGIN -->
+
     <form id="loginForm">
-        <h2>Iniciar Sesión</h2>
+        <h2>login</h2>
         <input type="text" id="usuario" placeholder="Usuario" required>
         <input type="password" id="clave" placeholder="Contraseña" required>
         <button type="submit">Ingresar</button>
